--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,9 @@
-Flask==2.3.2
-Flask-Cors==3.0.10
-boto3==1.28.3
-botocore==1.31.3
-pandas==2.0.3
-openpyxl==3.1.2
+Flask
+Flask-Cors
+boto3
+botocore
+pandas
+openpyxl
 sdv
-python-dotenv==1.0.0
+python-dotenv
+Gunicorn
